k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lumiscrape
  namespace: lumiscrape
  labels:
    app: lumiscrape
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: lumiscrape
